tests/reference/asr_preprocess-cpp_err5-38d12de.stderr
C preprocessor error: Unknown token '@'
 --> tests/errors/cpp_err5.f90:2:9
  |
2 | #if 1 + @ 1 2
  |         ^ 
